@@ -168,6 +168,9 @@ Core and builtins
 Library
 -------
 
+- Patch #1555098: use str.join() instead of repeated string
+  concatenation in robotparser.
+
 - Patch #1635454: the csv.DictWriter class now includes the offending
   field names in its exception message if you try to write a record with
   a dictionary containing fields not in the CSV field names list.
